(global, intro-section) added 'Alinsa' as a global font and fixed size of intro-section's text on mobile

--- a/client-app/src/index.css
+++ b/client-app/src/index.css
@@ -1,5 +1,12 @@
+@font-face {
+  font-family: 'Alsina';
+  src: url('./assets/fonts/Alsina/AlsinaUltrajada.TTF') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
 :root {
-  font-family: monospace;
+  font-family: 'Alsina', monospace, sans-serif;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
 
@@ -8,7 +15,7 @@
   -moz-osx-font-smoothing: grayscale;
 
   --navbar-width: 3rem;
-  --project-tile-height: 22rem;
+  --project-tile-height: 20rem;
 
   @media screen and (max-width: 700px) {
     --project-tile-height: 18rem;
