--- a/client-app/src/main-sections/Intro/Intro.module.css
+++ b/client-app/src/main-sections/Intro/Intro.module.css
@@ -7,11 +7,16 @@
 	.inner_container {
 		font-size: 1.5rem;
 
-		.bigger_text {
+		.animated_text {
 			font-size: 5rem;
+			font-family: monospace;
 
 			.highlighted {
 				color: #fa6728;
+			}
+
+			@media screen and (max-width: 700px) {
+				font-size: 3.5rem;
 			}
 		}
 	}
