--- a/client-app/src/main-sections/Projects/Projects.module.css
+++ b/client-app/src/main-sections/Projects/Projects.module.css
@@ -5,6 +5,6 @@
 	justify-items: center;
 	align-items: center;
 	margin: 3rem;
-	height: 80dvh;
-	overflow-y: auto;
+	/* height: 80dvh; */
+	/* overflow-y: auto; */
 }
